package openClosed.v2ObeyOCP.entity;

import openClosed.v2ObeyOCP.entity.shapes.base.Shape;

public class GraphicEditor {

    public void drawShape(Shape s) {
        s.draw();
    }

}
