package openClosed.v2ObeyOCP.entity.shapes;

import openClosed.v2ObeyOCP.entity.shapes.base.Shape;

public class Triangle extends Shape {
    @Override
    public void draw() {
        System.out.println("Triangle");
    }
}
